--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
   <meta charset="UTF-8">
   <title>Bikcraft</title>
   <link rel="stylesheet" href="./style.css">
-  <link rel="stylesheet" href="./fonts/Autography.otf">
 </head>
 
 <body>
   <header>
     <img src="./img/bikcraft.svg" alt="Bikcraft">
-    <nav aria-label="primária" class="menu">
+    <nav aria-label="primária">
       <ul class="menu">
         <li><a href="/">Sobre</a></li>
         <li><a href="/">Produtos</a></li>
@@ -51,7 +50,6 @@
             <img src="./img/rastreador.svg" alt="">
             <h3>Rastreador</h3>
             <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
-          </li>
           </li>
         </ul>
       </section>
